tests/parser/fail/01-unterminated-regex.nx
igm broken! {
    pattern = /[0-9]+
    expand(m: Match) = m.value
}
